crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__set__missing_closing_curly_brace_1.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/set/missing_closing_curly_brace_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..136,
        body: [
            Expr(
                ExprStmt {
                    range: 128..136,
                    value: Set(
                        SetExpr {
                            range: 128..136,
                            elts: [
                                BinOp(
                                    BinOpExpr {
                                        range: 131..136,
                                        left: Name(
                                            NameExpr {
                                                range: 131..132,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            NameExpr {
                                                range: 135..136,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | {
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
