crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__set__missing_closing_curly_brace_2.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/set/missing_closing_curly_brace_2.py
---
## AST

```
Module(
    ModModule {
        range: 0..144,
        body: [
            Expr(
                ExprStmt {
                    range: 134..144,
                    value: Set(
                        SetExpr {
                            range: 134..144,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 135..136,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                BinOp(
                                    BinOpExpr {
                                        range: 139..144,
                                        left: Name(
                                            NameExpr {
                                                range: 139..140,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            NameExpr {
                                                range: 143..144,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | {1,
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
