crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__set__missing_closing_curly_brace_3.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/set/missing_closing_curly_brace_3.py
---
## AST

```
Module(
    ModModule {
        range: 0..144,
        body: [
            Expr(
                ExprStmt {
                    range: 118..123,
                    value: Set(
                        SetExpr {
                            range: 118..123,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 119..120,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 122..123,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 125..144,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 129..132,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 132..134,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            PassStmt {
                                range: 140..144,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | # token starts a statement.
3 | 
4 | {1, 2
  |      ^ Syntax Error: Expected '}', found newline
5 | 
6 | def foo():
7 |     pass
  |
